# tarpc-wasm

./: .gitignore  .gitmodules  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  rpc_client.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  service_impl.rs  web.rs
