[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = {path="../tarpc/tarpc", default-features = false}
async-trait = "0.1.60"

[features]
server=["tarpc/server"]
client=["tarpc/client"]
